[tool.poetry]
name = "atomcache"
version = "0.5.5"
description = "Asynchronous cache manager designed for horizontally scaled web applications."
authors = ["Serghei Ungurean <srg.ungurean@gmail.com>", "Nichita Morcotilo <nmorkotilo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pysergio/atomcache"
repository = "https://github.com/pysergio/atomcache"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.2"
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
isort = "^5.10.0"
autoflake = "^1.4"
black = "^21.10b0"
wemake-python-styleguide = "^0.15.2"
mypy = "^0.910"
flake8-fixme = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["atomcache", "tests"]
combine_as_imports = true
