[tool.poetry]
name = "atomcache"
version = "0.7.5"
description = "Asynchronous cache manager designed for horizontally scaled web applications."
authors = ["Serghei Ungurean <srg@intelbit.io>", "Nichita Morcotilo <nmorkotilo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pysergio/atomcache"
repository = "https://github.com/pysergio/atomcache"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.61.2"
redis = "^4.5.4"

[tool.poetry.group.dev.dependencies]
autoflake = "1.7.8"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
isort = "^5.12"
black = "^23.3"
wemake-python-styleguide = "^0.17"
mypy = "^1.2.0"
flake8-fixme = "^1.1"
coverage = "^6.5.0"
types-redis = "^4.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["atomcache", "tests"]
combine_as_imports = true
